--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ main {
   margin-top: 30px;
   width: 80%;
   box-shadow: 5px 5px 5px 5px gray;
+  border-radius: 10px;
 }
 
 .titulo {
@@ -42,6 +43,8 @@ main {
   margin: 0;
   color: white;
   text-transform: uppercase;
+  font-size: 20px;
+  text-align: center;
 }
 
 .contenedor {
