--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
   font-weight: normal;
   overflow-x: hidden;
 }
+body
+{
+  background: url('../img/fondo.jpg');
+  background-repeat: no-repeat;
+}
 
 /*Section header */
 header {
@@ -11,6 +16,7 @@ header {
   display: flex;
   height: 63px;
   padding: 5px;
+  opacity: 0.5;
 }
 
 header h1 {
@@ -19,17 +25,19 @@ header h1 {
   margin: 0;
   text-align: left;
   text-transform: capitalize;
+  text-shadow: 5px 5px  #494a4a;
 }
 
 /* Section main */
 
 main {
-  background: #f9f9f9;
+  background: #4551BF;
   margin: 0 auto;
   margin-top: 30px;
   width: 80%;
-  box-shadow: 5px 5px 5px 5px gray;
+  box-shadow: 5px 0px 5px 0px #0366A9;
   border-radius: 10px;
+  opacity: 0.9;
 }
 
 .titulo {
@@ -38,6 +46,7 @@ main {
   align-items: center;
   justify-content: center;
   height: 63px;
+  opacity: 0.7;
 }
 .subtitulo {
   margin: 0;
@@ -127,6 +136,7 @@ footer {
   bottom: 0;
   position: fixed;
   width: 100%;
+  opacity: 0.7;
 }
 .footer-ciudad,
 .footer-derechos {
