--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,11 @@ header h1 {
 /* Section main */
 
 main {
-  background: #4551BF;
+  /* background: #4551BF; */
   margin: 0 auto;
   margin-top: 30px;
   width: 80%;
-  box-shadow: 5px 0px 5px 0px #0366A9;
+  box-shadow: 2px 0px 2px 0px #0366A9;
   border-radius: 10px;
   opacity: 0.9;
 }
@@ -71,7 +71,7 @@ main {
   width: 48%;
   margin-bottom: 40px;
   border-radius: 10px;
-  box-shadow: 5px 0px 5px 0px gray;
+  /* box-shadow: 5px 0px 5px 0px gray; */
 }
 
 form {
@@ -83,6 +83,7 @@ form {
 label {
   display: block;
   margin: 5px;
+  color: white;
 }
 
 textarea {
@@ -149,6 +150,8 @@ footer {
     display: block;
   }
 
+
+
   .botones .btn {
     width: 90%;
     margin-top: 5px;
@@ -161,6 +164,11 @@ footer {
 @media (max-width: 500px) {
   .subtitulo {
     font-size: 12px;
+  }
+  body{
+    background-image: none;
+    background-image: url(../img/fondo1.jpg);
+    background-size: cover;
   }
   main {
     width: 100%;
@@ -176,7 +184,9 @@ footer {
     position: relative;
   }
 }
+
 @media (max-width: 1024px) {
+
   .contenedor {
     display: block;
   }
